@@ -1,5 +1,5 @@
 //
-//  IScope.cs
+//  INamespace.cs
 //
 //  Author:
 //       Willem Van Onsem <vanonsem.willem@gmail.com>
@@ -18,16 +18,10 @@
 //
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-using System.Collections.Generic;
+using System;
 
 namespace ZincOxide {
-
-    public interface IScope<T> : ICollection<T> {
-
-        IScope<T> Parent {
-            get;
-        }
-
+    public interface INamespace {
     }
 }
 
