@@ -20,7 +20,7 @@
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System.IO;
 
-namespace ZincOxide.MiniZinc {
+namespace ZincOxide {
 
     public interface IWriteable {
 
